# AOC2023

./: Cargo.toml  README.md
src/days/: day1.rs  day1_2.rs  day2.rs  day2_2.rs  day3.rs
src/utils/: read_file.rs
