[package]
name = "AOC2023"
version = "0.1.0"
edition = "2021"
[lib]
name="utils"
path="src/lib.rs"

[[bin]]
name="day1"
path="src/days/day1.rs"

[[bin]]
name="day1_2"
path="src/days/day1_2.rs"

[[bin]]
name="day2"
path="src/days/day2.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25.0"
strum_macros = "0.25.3"
regex = { version = "1.10.2", features = [] }
unreachable = "1.0.0"
num = { version = "0.4.1", features = [] }
